[package]
name = "cset"
version = "0.1.0"
edition = "2021"
description = "Fine-grained and reversible struct transactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickdbush/cset"
readme = "../README.md"
categories = ["data-structures"]
keywords = ["undo", "history", "track"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cset-derive = { path = "../cset-derive", version = "0.1.0" }